RESOLVED FIXED242469
Fix some typos in comments.
https://bugs.webkit.org/show_bug.cgi?id=242469
Summary Fix some typos in comments.
Mark Lam
Reported 2022-07-07 11:41:47 PDT
...
Attachments
Mark Lam
Comment 1 2022-07-07 11:46:41 PDT
EWS
Comment 2 2022-07-07 11:51:09 PDT
Committed 252234@main (1fe26aa9391f): <https://commits.webkit.org/252234@main> Reviewed commits have been landed. Closing PR #2185 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-07 11:52:13 PDT
Note You need to log in before you can comment on or make changes to this bug.